core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_bootstrap_default.snap
---
source: core/crates/omegon/src/tui/snapshot_tests.rs
expression: output
---

  Ω  Omegon

  no providers — /connect to configure

  Git: unknown  Route: not selected  Profile: unknown  Context: Compact  Thinking: Medium
