core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_bootstrap_full.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
expression: output
---

  Ω  Omegon

  ✓ Anthropic (Claude) (oauth)
  ⚠ OpenAI API   (none)
  ✓ Ollama       1 model
  ✓ podman       5.3.1
  ✓ mcp          1/1 connected, 5 tools

  Context: Maniple  Thinking: High  Tier: victory
  ⚙ Systems Engineer
