core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_dashboard_with_focused_node.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
expression: render_to_string(&terminal)
---
│ Ω Dashboard
│
│── focus ──────────────────────
│ ⚙ auth-surface
│   Unified auth surface
│   ✓3 ?2 ⚠1 50%
│
│ no active nodes
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
