core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_footer_compact.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
expression: render_to_string(&terminal)
---
────────────────────────────────────────────────────────────────────────────────
 Ω claude-sonnet-4-6 V·M 42%
 T·12 ⚙·35 ⌗1500
