core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_unified_footer_console.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
expression: render_to_string(&terminal)
---
  engine                              ╭ inference ───────────────────────────────╮╭ tools ─────────────────────────────╮
  provider ⚡  Ollama (Local)          │⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇⣿⣧⣿⣿⣿⣿⣇⣿⣿⣿⡇⡀⡀⡀⡀⡀⠂⠂⠂⠂⠂⠂⠂⠂⠂⠂⠂⠂⠂││▸ ▫ recall       220ms≋≋≋≋≋≋≋≋≋≋≋≋≋≋│
  model   qwen3                       │⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇⣿⣧⣿⣿⣿⣿⣇⣿⣿⣿⡇⡀⡀⡀⡀⡀⠂⠂⠂⠂⠂⠂⠂⠂⠂⠂⠂⠂⠂││✗ ⊕ search       8.1s ≋≋≋≋≋≋≋≋≋≋≋≋≋·│
  auth    ○ api key                   │≡  conv  ⊟ sys  ◈  mem  ⚒ tools  ◔ think  ││  ⌘ sh           1.2s ≋≋≋≋≋≋≋≋≋≋≋≋≋·│
  persona ⚙ Systems Engineer          │↑  —   ↓  —   ⊙  —    ✦ 0  ◎  0 recalled  ││                                    │
  context Maniple 68% / 262k          ├─ project ⌗2440  ⠊⠉⠉⠑⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠒⠒⠤⢄││                                    │
  path    ~/workspace/black-…/omegon  ├─ working ⌗8  ⠊⠉⠉⠑⠒⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤││                                    │
  mode    Victory · think High        └─ episodes ⌗45  ⠊⠉⠉⠑⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤││                                    │
  session T·8 · ⚙ 23 · ↻ 2            │                                          ││                                    │
  version v0.15.5-rc.30 → v0.15.5     │                                          ││                                    │
                                      │                                          ││  3/3 active                        │
                                      ╰──────────────────────────────────────────╯╰────────────────────────────────────╯
